[package]
name = "easy_mutex"
version = "0.1.1"
edition = "2024"
authors = ["Marco Fabbroni (Fabbro03) <marco.fabbroni@outlook.it>"]
description = "A cloneable mutex wrapper that simplifies everyday use."
license = "Apache-2.0"
repository = "https://github.com/Fabbro03/easy_mutex"
exclude = [".github/*"]
